# Banking-System-FastAPI

./: .gitignore  README.md  main.py  pyproject.toml
backend/: app.py  main.py
backend/database/: users.json
backend/models/: db_manager.py  interest_calc.py  schema.py  utils.py
backend/routes/: activity_status.py  borrow_loan.py  clear_loan.py  create_account.py  delete_account.py  deposit_money.py  get_all_users.py  get_individual_user.py  get_user_by_pin.py  home.py  transact_money.py  transfer_money.py  update_account_details.py
backend/utils/: hashing.py
database/: accounts.json  loan_config.json  user_history.json
frontend/: app.py
frontend/.streamlit/: config.toml  secrets.toml
frontend/templates/: __init__.py  account_management.py  activity_analytics.py  current_users.py  home.py  kpi_metrics.py  loan_management.py  money_management.py  utils.py
frontend/templates/models/: schema.py
routes/: borrow_loan.py  clear_loan.py  create_account.py  delete_account.py  deposit_money.py  get_all_users.py  get_individual_user.py  home.py  transfer_money.py  update_account.py  withdraw_money.py
utils/: age_calc.py  db_manager.py  schema.py
