[project]
name = "fastapi-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "plotly>=6.7.0",
    "pydantic[email]>=2.12.5",
    "streamlit>=1.56.0",
    "streamlit-option-menu>=0.4.0",
    "uvicorn>=0.42.0",
]
